# celebtwin-ui

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.streamlit/: config.toml
celebtwin_ui/: main.py  playground.py
