[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "celebtwin-ui"
version = "0.1.0"
description = "User interface for celebtwin"
readme = "README.md"
license = {file = "agpl-3.0.txt"}
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "requests",
]

[project.scripts]
celebtwin-ui = "app:main"
